[gd_scene load_steps=12 format=2]

[ext_resource path="res://code/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://Puzzle.tscn" type="PackedScene" id=2]
[ext_resource path="res://StoryUIRiza.tscn" type="PackedScene" id=3]
[ext_resource path="res://BlockChooser.tscn" type="PackedScene" id=4]
[ext_resource path="res://code/Riza.gd" type="Script" id=5]
[ext_resource path="res://sprites/Environment/RizaBG.png" type="Texture" id=6]
[ext_resource path="res://CountdownBG.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/Light/light.png" type="Texture" id=8]
[ext_resource path="res://sprites/Environment/Arrow.png" type="Texture" id=9]
[ext_resource path="res://sprites/Environment/Alert.png" type="Texture" id=10]
[ext_resource path="res://FinishedBG.tscn" type="PackedScene" id=11]

[node name="Riza" type="Node2D"]
script = ExtResource( 5 )
next_scene_path = "res://Rubak.tscn"

[node name="RizaBG" type="Sprite" parent="."]
position = Vector2( 320, 512 )
texture = ExtResource( 6 )

[node name="Puzzle" parent="." instance=ExtResource( 2 )]

[node name="BlockChooser" parent="." instance=ExtResource( 4 )]

[node name="StoryUI" parent="." instance=ExtResource( 3 )]
margin_right = 1032.0
margin_bottom = 1106.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 512 )
current = true
script = ExtResource( 1 )
shake_amount = 2

[node name="ShakeTimer" type="Timer" parent="Camera2D"]
wait_time = 0.5
one_shot = true

[node name="FinishedBG" parent="." instance=ExtResource( 11 )]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 328, 528 )
texture = ExtResource( 8 )
texture_scale = 7.79

[node name="UnshineTween" type="Tween" parent="Light2D"]

[node name="NextArrow" type="Position2D" parent="."]
visible = false
position = Vector2( 944, 0 )
scale = Vector2( 0.5, 0.5 )

[node name="TextureButton" type="TextureButton" parent="NextArrow"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert" type="Sprite" parent="."]
visible = false
position = Vector2( 352, 464 )
texture = ExtResource( 10 )

[node name="Timer" type="Timer" parent="Alert"]
wait_time = 2.0
one_shot = true

[node name="CountdownBG" parent="." instance=ExtResource( 7 )]
visible = false
[connection signal="timeout" from="Camera2D/ShakeTimer" to="Camera2D" method="_on_ShakeTimer_timeout"]
[connection signal="pressed" from="NextArrow/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Alert/Timer" to="." method="_on_Timer_timeout"]
